fixes content shifting for projects on smaller screens

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -44,28 +44,30 @@ h1, h2, h3, h4, h5, h6, a {
 
 #about-me {
     height: 100vh;
+    width: 100vw;
     padding-top: 80px;
     text-align: center;
-    /*background: url(background.jpg);*/
-    /*background-size: cover;*/
-}
-
-#skills {
-    height: 100vh;
-    padding-top: 30px;
-    text-align: center;
-    background: rgba(218,237,226,0.5);
 }
 
 #projects {
     height: 100vh;
+    width: 100vw;
     padding-top: 20px;
+    text-align: center;
+    background: rgba(218,237,226,0.5);
+}
+
+#skills {
+    height: 100vh;
+    width: 100vw;
+    padding-top: 30px;
     text-align: center;
     background: #fff;
 }
 
 #educations {
     height: 100vh;
+    width: 100vw;
     padding-top: 80px;
     text-align: center;
     background: rgba(218,237,226,0.6);
@@ -73,7 +75,8 @@ h1, h2, h3, h4, h5, h6, a {
 
 #contacts {
     height: 100vh;
-    padding-top: 80px;
+    width: 100vw;
+    padding-top: 50px;
     text-align: center;
     background: #fff;
 }
